tried adding some basic authorization, because allowing all, can sometimes lead to quite unwelcome situtions
git-svn-id: https://scm.mmbase.org/mmbase/trunk@24054 91430c5f-d668-0410-9e7d-dd663366dcfd